--- a/components/buttons.html
+++ b/components/buttons.html
@@ -11,16 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Buttons</h1>
 
     <!--Buttons-->
-    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
             <!--Basic buttons-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Buttons</div>
                     <!--Blue basic button-->
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4">
@@ -45,7 +45,7 @@
             </div>
 
             <!--Round buttons-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Round Buttons</div>
                     <!--Round blue button-->
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full mb-4">
@@ -74,7 +74,7 @@
             </div>
 
             <!--Outline buttons-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Outline Buttons</div>
                 <!--Outline blue button-->
                 <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded mb-4">
@@ -103,7 +103,7 @@
             </div>
 
             <!--3d buttons-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">3D Buttons</div>
                 <!--3d blue button-->
                 <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded mb-4">
