--- a/components/forms.html
+++ b/components/forms.html
@@ -1,89 +1,103 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="src/input.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Forms</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="src/input.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-900">
-    <!--Page title-->
-    <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
-    <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Forms</h1>
+<body class="bg-white dark:bg-neutral-900">
+  <!--Page title-->
+  <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
+  <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Forms</h1>
 
-    <!--Forms-->
-    <div class="bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
-        <div class="container">
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
-                <div class="w-full">
-                    <!--Basic form-->
-                    <form class="bg-white dark:bg-slate-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                      <div class="mb-4">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
-                          Username
-                        </label>
-                        <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
-                      </div>
-                      <div class="mb-6">
-                        <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
-                          Password
-                        </label>
-                        <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
-                      </div>
-                      <div class="flex items-center justify-between">
-                        <button class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                          Sign In
-                        </button>
-                        <a class="inline-block align-baseline font-bold text-sm text-yellow-500 hover:text-yellow-800" href="#">
-                          Forgot Password?
-                        </a>
-                      </div>
-                    </form>
-                  </div>
-                
+  <!--Forms-->
+  <div class="bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="container">
+
+      <!--Basic Forms-->
+      <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+        <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Form</div>
+
+          <div class="w-full">
+
+          <!--Log In form-->
+          <form class="bg-white dark:bg-neutral-700 shadow-md rounded px-8 pt-6 pb-8 mb-4">
+            <div class="mb-4">
+              <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="username">
+                Username
+              </label>
+              <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="place for your name">
             </div>
-        
-        </div>
-    </div>
-
-
-    <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-2xl">
-            <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="extension-puzzle"></ion-icon>
-                    <span class="tab tab-wigets block text-xs">Wigets</span>
-                </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="book"></ion-icon>
-                    <span class="tab tab-pages block text-xs">Pages</span>
-                </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="home"></ion-icon>
-                    <span class="tab tab-home block text-xs">Home</span>
-                </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="contrast-sharp"></ion-icon>
-                    <span class="tab tab-theme block text-xs">Theme</span>
-                </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="search"></ion-icon>
-                    <span class="tab tab-search block text-xs">Search</span>
-                </a>
+            <div class="mb-6">
+              <label class="block text-gray-500 dark:text-gray-300 text-lg font-bold mb-2" for="password">
+                Password
+              </label>
+              <input class="appearance-none border-b-2 border-red-500 rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="************">
             </div>
-        </section>
-    </div>
+            <div class="flex items-center justify-between">
+              <button class="bg-blue-400 hover:bblue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+                Sign In
+              </button>
+              <a class="inline-block align-baseline font-bold text-sm text-blue-400 hover:text-blue-700" href="#">
+                Forgot Password?
+              </a>
+            </div>
+          </form>
 
-    <!--IONICONS-->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+          </div>
+
+      </div>
+    </div>
+  </div>
+    
+
+
+  <!--Footer Navigation Bar-->
+  <div class="w-full h-screen">
+    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+      <div id="tabs" class="flex justify-between">
+        <!--Wigets-->
+        <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+          <ion-icon name="extension-puzzle"></ion-icon>
+          <span class="tab tab-wigets block text-xs">Wigets</span>
+        </a>
+
+        <!--Pages-->
+        <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+          <ion-icon name="book"></ion-icon>
+          <span class="tab tab-pages block text-xs">Pages</span>
+        </a>
+
+        <!--Home-->
+        <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+          <ion-icon name="home"></ion-icon>
+          <span class="tab tab-home block text-xs">Home</span>
+        </a>
+
+        <!--Theme Modal Window-->
+        <a href="#" @click="modelOpen =!modelOpen"
+        class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+          <ion-icon name="contrast-sharp"></ion-icon>
+          <span class="tab tab-theme block text-xs">Theme</span>
+        </a>
+
+        <!--Search-->
+        <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+          <ion-icon name="search"></ion-icon>
+          <span class="tab tab-search block text-xs">Search</span>
+        </a>
+      </div>
+    </section>
+  </div>
+
+  <!--IONICONS-->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
