--- a/components/modal.html
+++ b/components/modal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widgets</title>
+    <title>Modal</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="src/input.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,105 +13,113 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="tailwind.css">
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
+
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white ">Modal</h1>
 
-        <!--Modal-->
-        <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2 top-2">
-            <div class="container">
-            <!--Modal-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
-                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Buttons</div>
-               <!--Modal window-->
-<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-<div id="themeModal">
-  <div x-data="{ modelOpen: false }">
-      <button @click="modelOpen =!modelOpen" class="flex items-center justify-center px-3 py-2 space-x-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-yellow-500 rounded-md">
-              <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
-          </svg>
-  
-          <span>modal</span>
-      </button>
-  
-      <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3 top-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-          <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
-              <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
-                  x-transition:enter="transition ease-out duration-300 transform"
-                  x-transition:enter-start="opacity-0" 
-                  x-transition:enter-end="opacity-100"
-                  x-transition:leave="transition ease-in duration-200 transform"
-                  x-transition:leave-start="opacity-100" 
-                  x-transition:leave-end="opacity-0"
-                  class="fixed inset-0 transition-opacity bg-opacity-40 backdrop-blur-md" aria-hidden="true"
-              ></div>
-  
-              <div x-cloak x-show="modelOpen" 
-                  x-transition:enter="transition ease-out duration-300 transform"
-                  x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" 
-                  x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
-                  x-transition:leave="transition ease-in duration-200 transform"
-                  x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
-                  x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
-                  class="inline-block w-full max-w-xl p-8 my-20 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-slate-800 rounded-xl shadow-lg"
-              >
-                    <div class="flex items-center justify-between space-x-4">
-                      <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
-                    
-                        <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                            </svg>
-                        </button>
-                    </div>
+    <!--Modals-->
+    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2 top-2">
+        <div class="container">
 
-                    <div >
-                    
+        <!--Basic Modal-->
+        <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic Modal</div>
+
+            <!--Bottom Modal-->
+            <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+                <div id="themeModal">
+                    <div x-data="{ modelOpen: false }">
+                        <button @click="modelOpen =!modelOpen" class="flex items-center justify-center px-3 py-2 space-x-2 text-sm tracking-wide text-white capitalize transition-colors duration-200 transform bg-blue-400 rounded-md">
+                            <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+                            </svg>
+                            <span>modal</span>
+                        </button>
+                        
+                        <div x-show="modelOpen" class="fixed inset-0 z-50 overflow-y-auto inset-x-3 top-3" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+                            <div class="flex items-end justify-center min-h-screen px-4 text-center md:items-center sm:block sm:p-0">
+                                <div x-cloak @click="modelOpen = false" x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0" 
+                                    x-transition:enter-end="opacity-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100" 
+                                    x-transition:leave-end="opacity-0"
+                                    class="fixed inset-0 transition-opacity bg-opacity-40 backdrop-blur-md" aria-hidden="true">
+                                </div>
+                        
+                                <div x-cloak x-show="modelOpen" 
+                                    x-transition:enter="transition ease-out duration-300 transform"
+                                    x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95" 
+                                    x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                                    x-transition:leave="transition ease-in duration-200 transform"
+                                    x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100" 
+                                    x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                                    class="inline-block w-full max-w-xl p-8 my-32 overflow-hidden text-left transition-all transform bg-slate-200 dark:bg-neutral-800 rounded-xl shadow-lg"
+                                    >
+                                        <div class="flex items-center justify-between space-x-4">
+                                            <h1 class="text-2xl font-medium text-gray-600 dark:text-gray-400 ">Modal</h1>
+                                            <!--Button for Close Modal Window-->
+                                            <button @click="modelOpen = false" class="text-gray-600 focus:outline-none hover:text-gray-700">
+                                                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                                </svg>
+                                            </button>
+                                        </div>  
+                                </div>            
+                            </div>
+                        </div>
+                            
                     </div>
-                    
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-    
+                </div>
+            </div>
+                            
+            </div>
             </div>
         </div>
+                        
+  
+  
+  
+  
+<!--Footer Navigation Bar-->
+<div class="w-full h-screen">
+    <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
+        <div id="tabs" class="flex justify-between">
+            <!--Wigets-->
+            <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="extension-puzzle"></ion-icon>
+                <span class="tab tab-wigets block text-xs">Wigets</span>
+            </a>
+
+            <!--Pages-->
+            <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="book"></ion-icon>
+                <span class="tab tab-pages block text-xs">Pages</span>
+            </a>
+
+            <!--Home-->
+            <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="home"></ion-icon>
+                <span class="tab tab-home block text-xs">Home</span>
+            </a>
+
+            <!--Theme Modal Window-->
+            <a href="#" onclick="openModal()"
+            class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="contrast-sharp"></ion-icon>
+                <span class="tab tab-theme block text-xs">Theme</span>
+            </a>
+
+            <!--Search-->
+            <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="search"></ion-icon>
+                <span class="tab tab-search block text-xs">Search</span>
+            </a>
         </div>
-        
-  
-  
-  
-  
-      <!--Footer Navigation Bar-->
-      <div class="w-full h-screen">
-          <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
-              <div id="tabs" class="flex justify-between">
-                  <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                      <ion-icon name="extension-puzzle"></ion-icon>
-                      <span class="tab tab-wigets block text-xs">Wigets</span>
-                  </a>
-                  <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                      <ion-icon name="book"></ion-icon>
-                      <span class="tab tab-pages block text-xs">Pages</span>
-                  </a>
-                  <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                      <ion-icon name="home"></ion-icon>
-                      <span class="tab tab-home block text-xs">Home</span>
-                  </a>
-                  <a href="#" @click="modelOpen =!modelOpen"
-                  class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                      <ion-icon name="contrast-sharp"></ion-icon>
-                      <span class="tab tab-theme block text-xs">Theme</span>
-                  </a>
-                  <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                      <ion-icon name="search"></ion-icon>
-                      <span class="tab tab-search block text-xs">Search</span>
-                  </a>
-              </div>
-          </section>
-      </div>
+    </section>
+</div>
 
 <script src="main.js"></script>
 <!--IONICONS-->
