--- a/components/alerts.html
+++ b/components/alerts.html
@@ -11,16 +11,111 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Alerts</h1>
 
     <!--Alerts-->
-    <div class="bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+
+            <!--Split alerts-->
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Split alerts</div>
+                    <!--Blue-->
+                    <div class="w-full">
+                    <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md" role="alert">
+                        <p class="border-b-2 border-blue-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Gray-->
+                    <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm" role="alert">
+                        <p class="border-b-2 border-gray-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Green-->
+                    <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md" role="alert">
+                        <p class="border-b-2 border-green-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Red-->
+                    <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md" role="alert">
+                        <p class="border-b-2 border-red-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Yellow-->
+                    <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md" role="alert">
+                        <p class="border-b-2 border-yellow-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Purple-->
+                    <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md" role="alert">
+                        <p class="border-b-2 border-purple-300">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                    <!--Dark-->
+                    <div class="py-3 px-5 mb-4 bg-gray-600 text-gray-900 rounded-md text-sm" role="alert">
+                        <p class="border-b-2 border-gray-700">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore.</p>
+                        <p>Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <!--Border Left alerts-->
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+                <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Border Left alerts</div>
+
+                    <!--Blue-->
+                <div class="w-full">
+                    <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border-l-4 border-blue-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Gray-->
+                    <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm border-l-4 border-gray-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Green-->
+                    <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md border-l-4 border-green-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Red-->
+                    <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md border-l-4 border-red-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Yellow-->
+                    <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md border-l-4 border-yellow-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Purple-->
+                    <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md border-l-4 border-purple-400" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                    <!--Dark-->
+                    <div class="py-3 px-5 mb-4 bg-gray-600 text-gray-900 rounded-md text-sm border-l-4 border-gray-900" role="alert">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, labore. Porro, ipsa fugiat qui eos exercitationem ea soluta quam, iusto, ipsum voluptates quod doloremque!
+                    </div>
+
+                </div>
+            </div>
+
+            <!--Basic Alerts-->
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic alerts</div>
+
                 <div class="w-full">
                     <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border border-blue-200" role="alert">
                         This is a nice alert!
@@ -51,7 +146,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5" role="alert">
+
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5" role="alert">
                 <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Alert with title</div>
                 <div class="w-full">
                     <div class="mb-4 bg-blue-100 text-blue-900 rounded-md border border-blue-200 flex flex-col">
@@ -119,8 +215,11 @@
                 </div>
             </div>
 
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <!--Closing Alerts-->
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold text-gray-800 dark:text-white mb-3">Closing Alert</div>
+
+
                 <div class="w-full">
                     <div class="py-3 px-5 mb-4 bg-blue-100 text-blue-900 text-sm rounded-md border border-blue-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
@@ -131,6 +230,7 @@
                         </button>
                     </div>
 
+
                     <div class="py-3 px-5 mb-4 bg-gray-100 text-gray-900 rounded-md text-sm border border-gray-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
                         <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
@@ -139,6 +239,7 @@
                             </svg>
                         </button>
                     </div>
+
 
                     <div class="py-3 px-5 mb-4 bg-green-100 text-green-900 text-sm rounded-md border border-green-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
@@ -149,6 +250,7 @@
                         </button>
                     </div>
 
+
                     <div class="py-3 px-5 mb-4 bg-red-100 text-red-900 text-sm rounded-md border border-red-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
                         <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
@@ -157,6 +259,7 @@
                             </svg>
                         </button>
                     </div>
+
 
                     <div class="py-3 px-5 mb-4 bg-yellow-100 text-yellow-900 text-sm rounded-md border border-yellow-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
@@ -167,6 +270,7 @@
                         </button>
                     </div>
 
+
                     <div class="py-3 px-5 mb-4 bg-purple-100 text-purple-900 text-sm rounded-md border border-purple-200 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
                         <button class="w-4" type="button" data-dismiss="alert" aria-label="Close" onclick="this.parentElement.remove();">
@@ -175,6 +279,7 @@
                             </svg>
                         </button>
                     </div>
+
 
                     <div class="py-3 px-5 mb-4 bg-gray-300 text-gray-900 rounded-md text-sm border border-gray-400 flex items-center justify-between" role="alert">
                         <span>Looks like a alert to close!</span>
@@ -185,6 +290,7 @@
                         </button>
                     </div>
 
+
                 </div>
             </div>
 
@@ -193,33 +299,41 @@
     
     <!--Footer Navigation Bar-->
     <div class="w-full h-screen">
-        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-2xl">
+        <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
-                <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="extension-puzzle"></ion-icon>
-                    <span class="tab tab-wigets block text-xs">Wigets</span>
-                </a>
-                <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="book"></ion-icon>
-                    <span class="tab tab-pages block text-xs">Pages</span>
-                </a>
-                <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="home"></ion-icon>
-                    <span class="tab tab-home block text-xs">Home</span>
-                </a>
-                <a href="#" onclick="openModal()"
-                class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="contrast-sharp"></ion-icon>
-                    <span class="tab tab-theme block text-xs">Theme</span>
-                </a>
-                <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
-                    <ion-icon name="search"></ion-icon>
-                    <span class="tab tab-search block text-xs">Search</span>
-                </a>
+            <!--Wigets-->
+            <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="extension-puzzle"></ion-icon>
+                <span class="tab tab-wigets block text-xs">Wigets</span>
+            </a>
+    
+            <!--Pages-->
+            <a href="../index-pages.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="book"></ion-icon>
+                <span class="tab tab-pages block text-xs">Pages</span>
+            </a>
+    
+            <!--Home-->
+            <a href="../index.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="home"></ion-icon>
+                <span class="tab tab-home block text-xs">Home</span>
+            </a>
+    
+            <!--Theme Modal Window-->
+            <a href="#" @click="modelOpen =!modelOpen"
+            class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="contrast-sharp"></ion-icon>
+                <span class="tab tab-theme block text-xs">Theme</span>
+            </a>
+    
+            <!--Search-->
+            <a href="../index-search.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
+                <ion-icon name="search"></ion-icon>
+                <span class="tab tab-search block text-xs">Search</span>
+            </a>
             </div>
         </section>
     </div>
-
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
