--- a/components/modal.html
+++ b/components/modal.html
@@ -106,7 +106,7 @@
             </a>
 
             <!--Theme Modal Window-->
-            <a href="#" onclick="openModal()"
+            <a href="#" @click="modelOpen =!modelOpen"
             class="w-full text-gray-700 dark:text-gray-100 focus:text-blue-400 hover:text-blue-400 justify-center inline-block text-center pt-2 pb-1">
                 <ion-icon name="contrast-sharp"></ion-icon>
                 <span class="tab tab-theme block text-xs">Theme</span>
