--- a/components/cards.html
+++ b/components/cards.html
@@ -90,7 +90,7 @@
         <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Cards with Image</div>
 
           <!--Card with Image-->
-          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5">
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 my-5">
             <img class="w-full" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80"> 
             <div class="px-6 py-4 bg-slate-200 dark:bg-neutral-700 dark:border-gray-700">
               <h1 class="font-bold text-xl mb-2 dark:text-white">Card with Image</h1>
@@ -104,7 +104,7 @@
         
 
           <!--Card with Blured Image-->
-          <div class="rounded-xl overflow-hidden shadow-lg mx-4 mt-5">
+          <div class="rounded-xl overflow-hidden shadow-lg mx-4 my-5">
             <img class="w-full blur-lg" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80"> 
             <div class="px-6 py-4 bg-slate-200 dark:bg-neutral-700 dark:border-gray-700">
               <h1 class="font-bold text-xl mb-2 dark:text-white">Card with Blured Image</h1>
@@ -113,6 +113,15 @@
                 Voluptatibus quia, nulla! Maiores et perferendis eaque,
                 exercitationem praesentium nihil.
                 </p>
+            </div>
+          </div>
+
+          <!--Backdrop blured image-->
+          <div class="relative overflow-hidden rounded-xl shadow-lg mx-4 my-5">
+            <img class="object-cover w-full h-48 blur-3xl" src="https://images.unsplash.com/photo-1483728642387-6c3bdd6c93e5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2076&q=80" alt=""/>
+            <div class="absolute top-0 left-0 px-6 py-4">
+              <h4 class="mb-3 text-xl font-bold tracking-tight text-white">This is card with backgound overlay</h4>
+              <p class="leading-normal text-gray-100">Lorem ipsum dolor, sit amet cons ectetur adipis icing elit. Praesen tium, quibusdam facere quo laborum maiores sequi nam tenetur laud.</p>
             </div>
           </div>
 
