--- a/components/back-to-top.html
+++ b/components/back-to-top.html
@@ -13,22 +13,22 @@
     <!--Important for back to top button-->
     <script defer src="https://unpkg.com/alpinejs@3.2.3/dist/cdn.min.js"></script>
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Back to Top</h1>
 
     <!--Buttons-->
-    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
             <!--Basic buttons-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Back to Top</div>
                     <p class="text-slate-800 dark:text-white font-medium mb-4 font-mono">
                         To see how it works, scroll down the page and click on the button that appears.
 
                     </p>
-                    <p class="text-slate-800 dark:text-white font-medium mb-4">
+                    <p class="text-neutraa-800 dark:text-white font-medium mb-4">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Amet dolor in aliquid nesciunt, ipsam laudantium ex quae recusandae deleniti?
                         Harum et consequatur soluta ab animi distinctio minima ad facilis quod?
@@ -39,17 +39,11 @@
 
                 <!--Button-->
                 <button x-data="topBtn" @click="scrolltoTop" id="topButton"
-                    class="fixed z-10 hidden p-2 bg-slate-200 dark:bg-slate-700 rounded-full shadow-lg right-10 animate-bounce">
+                    class="fixed z-10 hidden p-2 bg-slate-200 dark:bg-neutral-700 rounded-xl shadow-lg right-10 animate-bounce">
                     <ion-icon size="large" name="arrow-up-outline"></ion-icon>
                 </button>
 
-                <!--Button-->
-                <button x-data="topBtn" @click="scrolltoTop" id="topButton"
-                   class="fixed z-20 hidden bg-slate-200 dark:bg-slate-700 rounded-full shadow-lg right-8 animate-bounce">
-                   <ion-icon size="large" name="arrow-up-outline"></ion-icon>
-               </button>
-
-                <!--Scrtipt for back to top buttons-->
+                <!--Script for back to top buttons-->
                 <script>
                     document.addEventListener('alpine:init', () => {
                         Alpine.data('topBtn', () => ({
@@ -76,7 +70,7 @@
 
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">
+    <div class="w-full h-screen fixed">
         <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
