--- a/components/breadcrumbs.html
+++ b/components/breadcrumbs.html
@@ -11,16 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-900">
+<body class="bg-white dark:bg-neutral-900">
     <!--Page title-->
     <h1 class="text-xs ml-4 mt-3 font-bold text-gray-700 dark:text-gray-400">OVERVIEW</h1>
     <h1 class="text-4xl ml-4 mt-0 font-bold dark:text-white">Breadcrumbs</h1>
 
     <!--Breadcrumbs-->
-    <div class="min-w-screen min-h-screen bg-white dark:bg-slate-900 flex items-center justify-center py-6 mx-4 my-2">
+    <div class="min-w-screen min-h-screen bg-white dark:bg-neutral-900 flex items-center justify-center py-6 mx-4 my-2">
         <div class="container">
             <!--Basic breadcrumbs-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Basic breadcrumbs</div>
                 <!--#1-->
                 <div class="flex items-center py-4 overflow-x-auto whitespace-nowrap">
@@ -177,7 +177,7 @@
             </div>
 
             <!--Arrow breadcrumbs-->
-            <div class="card bg-slate-100 dark:bg-slate-800 py-3 px-5 rounded-xl flex flex-col mb-5">
+            <div class="card bg-slate-100 dark:bg-neutral-800 py-3 px-5 rounded-xl flex flex-col mb-5">
                 <div class="title text-2xl font-bold mb-3 text-gray-800 dark:text-white">Arrow breadcrumbs</div>
                 <!--#1-->
                 <div class="flex items-center py-4 overflow-x-auto whitespace-nowrap">
@@ -342,7 +342,7 @@
 
 
     <!--Footer Navigation Bar-->
-    <div class="w-full h-screen">
+    <div class="w-full h-screen fixed">
         <section id="bottom-navigation" class="block fixed inset-x-0 bottom-0 z-10 shadow rounded-xl mx-3 my-2 backdrop-blur-lg">
             <div id="tabs" class="flex justify-between">
                 <a href="../index-components.html" class="w-full text-gray-700 dark:text-gray-100 focus:text-yellow-500 hover:text-yellow-500 justify-center inline-block text-center pt-2 pb-1">
